Fixed contact form, need to add Nav jump thing.

--- a/base/static/stylesheets/styles.css
+++ b/base/static/stylesheets/styles.css
@@ -33,8 +33,8 @@ html{
 }
 
 #body{
-  margin-bottom: 1000px;
-  background-color: rgb(110, 13, 200);
+  background-color: rgb(105, 105, 3);
+  text-decoration: none;
 }
 
 .about_me{
@@ -83,6 +83,7 @@ html{
 
 .project-Description{
   text-align: center;
+  margin-top: -15px;
 }
 
 
@@ -114,18 +115,21 @@ html{
   padding: 2%;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
-  width: 60%;
+  align-items: center;
+  width: 50%;
   padding: 0 30px 30px 30px;
 }
 
 #Contact-me{
-  text-align: center;
   width: 100%;
+  text-align: center;
+
 }
  
 .test{
   width: 100%;
+  white-space: wrap;
+  
 }
 
 
@@ -133,20 +137,30 @@ html{
 .contact-text,
 .contact-email{
   width: 100%;
-  height: 20px;
+  height: 25px;
   border-radius: 5px;
 }
 
 .sumbit{
-  width: 100%;
-  background-color: aqua;
-  height: 30px;
-  border-radius: 5px;
-  margin-top: 1%;
+  position: relative;
+  width: 15%;
+  background-color: rgb(16, 213, 30);
+  height: 40px;
+  border-radius: 50px;
+  left: 3%;
+  right: 50%;
 }
 
 .contact-text{
   height: 100px;
+  text-align: justify;
+  white-space: wrap;
+}
+
+textarea{
+  width: 100%;
+  resize: none;
+  
 }
 
 
